# diploma_project

./: .gitignore  crypto_data.ipynb  crypto_data.py  models_portfolio.ipynb  monoactive_lstm.ipynb  pyproject.toml  request1.txt
models/binance/4hours/: model1.pth  model2.pth  model3.pth  model4.pth  model5.pth
models/binance/hour/: model1.pth
modules/: loss_functions.py  networks.py
nn_alpgotrading/: data_processing.py  loss_functions.py  networks.py  training_process.py
notebooks/: crypto_data.ipynb
